<resources>
    <string name="app_name">AP LinkedIn</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="login_title">Welcome Back</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button_text">Log In</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="login_error_invalid_credentials">Invalid username or password.</string>
    <string name="login_error_network">Network error. Please try again later.</string>
    <string name="login_success">Logged in successfully</string>
    <string name="login_safeLoginError">Please enter valid credentials.</string>
    <string name="invalid_credentials">Invalid email or password</string>

    <string name="signup_title">Welcome to AP-LinkedIn!</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email Address</string>
    <string name="confirm_email_hint">Confirm Email Address</string>
    <string name="password_create_hint">Create Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="signup_error_empty_field">Please fill in all fields.</string>
    <string name="signup_error_password_mismatch">Passwords do not match.</string>
    <string name="signup_error_email_invalid">Please enter a valid email address.</string>
    <string name="signup_success_message">Your account has been created! Please check your email for verification.</string>

    <string name="profile_title">My Profile</string>
    <string name="edit_profile_button_text">Edit Profile</string>
    <string name="connections_title">Connections</string>
    <string name="no_connections_text">You don\'t have any connections yet. Start building your network!</string>
    <string name="posts_title">Posts</string>
    <string name="no_posts_text">You haven\'t created any posts yet. Share your thoughts and experiences!</string>

    <string name="home_button_text">Home</string>
    <string name="search_button_text">Search</string>
    <string name="notifications_button_text">Notifications</string>
    <string name="inbox_button_text">Messages</string>
    <string name="more_button_text">More</string>

    <string name="create_post_title">Create a Post</string>
    <string name="write_something_hint">What\'s on your mind?</string>
    <string name="post_button_text">Post</string>

    <string name="search_hint">Search for people, jobs, or companies</string>

    <string name="error_generic">An error occurred. Please try again.</string>
    <string name="ok_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="server_ip_hint">server IP address</string>
    <string name="submit_button_text">submit</string>
    <string name="enter_server_ip_text">Enter Server IP below:</string>
    <string name="invalid_password">Invalid Password format</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="email_exist">This email is already registered</string>
    <string name="username_exist">This username is already registered</string>
    <string name="internal_error">Internal server error, please try again</string>
    <string name="additional_name_hint">Additional Name</string>
    <string name="enter_info_text">Please enter your information:</string>
    <string name="city_hint">City</string>
    <string name="country_hint">Country</string>
    <string name="profession_hint">Profession</string>
    <string name="education_info">Education Information:</string>
    <string name="institute_name_hint">Institute Name</string>
    <string name="major_hint">Major</string>
    <string name="education_start_date_hint">Education Start Date</string>
    <string name="education_end_date_hint">Education End Date</string>
    <string name="gpa_hint">GPA</string>
    <string name="activities_description_hint">Description of Activities</string>
    <string name="description_hint">Description</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="invalid_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="invalid_additional_name">Invalid additional name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_city">Invalid city</string>
    <string name="invalid_country">Invalid country</string>
    <string name="invalid_profession">Invalid profession</string>
    <string name="invalid_institute_name">Invalid institute name</string>
    <string name="invalid_major">Invalid major</string>
    <string name="invalid_education_start_date">Invalid education start date</string>
    <string name="invalid_education_end_date">Invalid education end date</string>
    <string name="invalid_gpa">Invalid GPA</string>
    <string name="invalid_activities_description">Invalid description of activities</string>
    <string name="invalid_description">Invalid description</string>
    <string name="profile_saved">Profile saved successfully</string>

    <string name="country">Country</string>
    <string name="bio">A Geek.</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="user_information">User Information</string>
    <string name="username_">Username</string>
    <string name="city">City</string>
    <string name="profession">Profession</string>
    <string name="current_job">Current job</string>
    <string name="institute_name">Current institute</string>
    <string name="contact_info">Contact info</string>
    <string name="job_status">Job status</string>
    <string name="social_media">Social Media</string>
    <string name="hintEmail">example@example.com</string>
</resources>
