<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvProfileInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_info_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:maxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvProfileInfo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFirstName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAdditionalName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/additional_name_hint"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLastName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAdditionalName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/city_hint"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/country_hint"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCity" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProfession"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profession_hint"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCountry" />

        <TextView
            android:id="@+id/tvEducation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/education_info"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etProfession" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInstituteName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/institute_name_hint"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEducation" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMajor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/major_hint"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etInstituteName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEducationStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/education_start_date_hint"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etMajor" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEducationEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/education_end_date_hint"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEducationStartDate" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGPA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/gpa_hint"
            android:maxLength="40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEducationEndDate" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etActivitiesDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/activities_description_hint"
            android:maxLength="500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etGPA" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:maxLength="1000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etActivitiesDescription" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/submit_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
