<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="377dp"
        android:layout_height="427dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="64dp"
        android:paddingBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.615" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="318dp"
            android:layout_height="44dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/email_hint"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="318dp"
            android:layout_height="44dp"
            android:layout_marginBottom="60dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email" />

        <Button
            android:id="@+id/login"
            android:layout_width="191dp"
            android:layout_height="55dp"
            android:layout_marginBottom="4dp"
            android:text="@string/login_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password" />

        <Button
            android:id="@+id/signup"
            android:layout_width="104dp"
            android:layout_height="54dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sign_up_button_text"
            style="?attr/materialButtonOutlinedStyle"
            app:layout_constraintBottom_toBottomOf="@+id/login"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/login"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
