<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="377dp"
        android:layout_height="275dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="64dp"
        android:paddingBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_server_ip_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@+id/server_ip_edit_text"
            app:layout_constraintStart_toStartOf="@+id/server_ip_edit_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_ip_edit_text"
            android:layout_width="318dp"
            android:layout_height="44dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/server_ip_hint"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="316dp"
            android:layout_height="55dp"
            android:layout_marginBottom="4dp"
            android:text="@string/submit_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
